2007-03-07  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* MonoDevelop.DesignerSupport/RemoteDesignerProcess.cs:
	  Only restart GUI thread if it was stopped by an exception. This 
	  means that the GUI thread will now be able to stop, so there 
	  won't be lots of orphaned mdhost processes left around.

2007-03-06  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/EventEditor.cs:
	  Initialize override should call base, so display text gets set.

2007-03-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.mdp, Makefile.am: Updated.
	* MonoDevelop.DesignerSupport/DesignerSupportService.cs: Added methods
	  for changing the content of the property pad.
	* MonoDevelop.DesignerSupport/MemberExistsException.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindDisplayBinding.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindViewContent.cs:
	  Fix warnings.
	* MonoDevelop.DesignerSupport/ToolboxService.cs: Implement support for
	  drag&drop and track changes in dynamic item providers.
	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/EnumEditor.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/StringEditor.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/BaseEditor.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/ColorEditor.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/NumberEditor.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/BoolEditor.cs:
	  Removed old editors.
	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/TextEditorDialog.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/FlagsSelectorDialog.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/FloatRange.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/ColorEditorCell.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/BooleanEditorCell.cs,
	  MonoDevelop.DesignerSupport.PropertyGrid.Editors/TimeSpanEditor.cs,